tests/cases/control-flow/errors/for-into-iterator-result-not-iterator.ari
struct Bag {
  value: i64,
}

impl IntoIterator[i64] for Bag {
  fn into_iter(self) -> i64 {
    self.value
  }
}

fn main() -> i64 {
  let bag = Bag { value: 1 };
  for value in bag {
    return value;
  }
  return 0;
}
